JS file Connection Problem Solve

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <span>BDT</span>
               </div>  
 
-              <h2 id="card2-donate-title" class="card-title font-bold text-[#111111] text-xl md:text-3xl py-5">Donate for Flood Relief in Feni,Bangladesh</h2>
+              <h2 id="card2-donate-title" class="card-title font-bold text-[#111111] text-xl md:text-3xl py-5">Donate for Flood Relief in Feni, Bangladesh</h2>
               <p class="lg:text-2xl text-[#111111B3] mb-6 md:text-lg">  The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
               <input id="card2-donation-amount" type="text" placeholder="Write Donation Amount" class="border border-collapse rounded-xl w-full mb-3 p-3 lg:p-5 md:text-xl"/>
               <button onclick="handleDonateBtn('card2')"class="p-3 lg:p-5 rounded-xl bg-[#B4F461] text-black font-bold md:text-2xl w-full" >Donate Now</button>
@@ -132,6 +132,6 @@
     <footer></footer>
     
     <!-- JS File -->
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
