--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
               <h2 id="card1-donate-title" class="card-title font-bold text-[#111111] text-xl md:text-3xl py-5">Donate for Flood at Noakhali, Bangladesh</h2>
               <p class="lg:text-2xl text-[#111111B3] mb-6 md:text-lg"> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
-              <input id="card1-donation-amount" type="text" placeholder="Write Donation Amount" class="border border-collapse rounded-xl w-full mb-3 p-3 lg:p-5 md:text-xl"/>
+              <input id="card1-donation-amount" type="number" placeholder="Write Donation Amount" class="border border-collapse rounded-xl w-full mb-3 p-3 lg:p-5 md:text-xl"/>
               <button onclick="handleDonateBtn('card1')"class="p-3 lg:p-5 rounded-xl bg-[#B4F461] text-black font-bold md:text-2xl w-full" >Donate Now</button>
             </div>
           </div>
@@ -84,7 +84,7 @@
 
               <h2 id="card2-donate-title" class="card-title font-bold text-[#111111] text-xl md:text-3xl py-5">Donate for Flood Relief in Feni, Bangladesh</h2>
               <p class="lg:text-2xl text-[#111111B3] mb-6 md:text-lg">  The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
-              <input id="card2-donation-amount" type="text" placeholder="Write Donation Amount" class="border border-collapse rounded-xl w-full mb-3 p-3 lg:p-5 md:text-xl"/>
+              <input id="card2-donation-amount" type="number" placeholder="Write Donation Amount" class="border border-collapse rounded-xl w-full mb-3 p-3 lg:p-5 md:text-xl"/>
               <button onclick="handleDonateBtn('card2')"class="p-3 lg:p-5 rounded-xl bg-[#B4F461] text-black font-bold md:text-2xl w-full" >Donate Now</button>
             </div>
           </div>
@@ -102,7 +102,7 @@
               </div>  
               <h2 id="card3-donate-title" class= "card-title font-bold text-[#111111] text-xl md:text-3xl py-5">Aid for Injured in the Quota Movement</h2>
               <p class="lg:text-2xl text-[#111111B3] mb-6 md:text-lg"> The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
-              <input id="card3-donation-amount" type="text" placeholder="Write Donation Amount" class="border border-collapse rounded-xl w-full mb-3 p-3 lg:p-5 md:text-xl"/>
+              <input id="card3-donation-amount" type="number" placeholder="Write Donation Amount" class="border border-collapse rounded-xl w-full mb-3 p-3 lg:p-5 md:text-xl"/>
               <button onclick="handleDonateBtn('card3')"class="p-3 lg:p-5 rounded-xl bg-[#B4F461] text-black font-bold md:text-2xl w-full" >Donate Now</button>
             </div>
           </div>
